                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 06-03-2005 changed: keymap.xml updated to allow skip and ffw/rew when in vis.
  - 06-03-2005 fixed: my music Nav window: play action works again, and artists list now sorts excluding "the"
  - 06-03-2005 added: New built-in command XBMC.PlayMedia(filename). For instance to map a radiostation to a key in keymap.xml
  - 06-03-2005 fixed: HttpApi crash if webserver not enabled
  - 06-03-2005 added: HttpApi patch as described here http://www.xboxmediaplayer.de/cgi-bin/forums/ikonboard.pl?s=227ea528324363fb8af20c24d5ff3ddd;act=ST;f=5;t=9397
  - 05-03-2005 added: thumbAlign tag for thumbnailpanel controls, only supports center so far which centers the thumbs on the texture <thumbAlign>center</thumbAlign>. thumbPosX/thumbPosY will bump it out of center.
  - 05-03-2005 added: ActivateWindow() function now accepts a path parameter or bookmark name for bookmark jumping. Valid windows ID's for this are 1,2,3,6,501.  Example: ActivateWindow(6,F:\Videos) or ActivateWindow(501,Music Server). Valid windows ID's for this are 1,2,3,6,501
  - 05-03-2005 added: the default tag for the each section's bookmark can now be a bookmark name
  - 05-03-2005 changed: minor gui rendering tweaks
  - 05-03-2005 fixed: playback from any source when cache dialog was visible locks xbmc up (internet streams)
  - 04-03-2005 added: my music nav window now supports files with tagged with multipe artists and genres
  - 04-03-2005 changed: my music nav window artists, albums, and song titles sort without "the " prefix
  - 04-03-2005 fixed: my music, no thumbs for songs in database views when coverart is loaded from tags